# fluffy_nest_backend

./: .gitignore  CMakeLists.txt  README.md  config.json  default_setting.json  main.cc  mix.exs  vcpkg.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
controllers/: api_article.cc  api_article.h  api_check.cc  api_check.h  api_hello.cc  api_hello.h  api_object.cc  api_object.h  api_user.cc  api_user.h
filters/: filter_EnableCores.cc  filter_EnableCores.h  filter_UserAuth.cc  filter_UserAuth.h  filter_UserEmailExist.cc  filter_UserEmailExist.h  filter_UserIdExist.cc  filter_UserIdExist.h  filter_keywords.h  user_validator_middleware.cpp  user_validator_middleware.hpp
lib/: fluffy_nest.ex  fluffy_nest_web.ex
lib/fluffy_nest/: application.ex  mailer.ex  repo.ex  user.ex
lib/fluffy_nest_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/fluffy_nest_web/controllers/: error_json.ex  hello_controller.ex
models/: model.json  singleton_prototype.hpp  users.cpp  users.hpp
priv/repo/: seeds.exs
priv/repo/migrations/: 20250118123008_create_users.exs
services/: logger.cpp  logger.hpp  object_storage_service.cpp  object_storage_service.hpp  user_services.cpp  user_services.hpp
test/: CMakeLists.txt  test_helper.exs
test/fluffy_nest_web/controllers/: error_json_test.exs
test/support/: conn_case.ex  data_case.ex
types/: base.hpp  basic_value.hpp  nlohmann_json_request.hpp  nlohmann_json_response.hpp  schema.hpp  type.hpp
utils/: date.h  drogon_specialization.hpp  exception_handler.cpp  object_parser.cpp  object_parser.hpp  string.cpp  string.hpp
